solc_mutator_ossfuzz_seed_corpus/test_sol/test_335f732e30d49fbeb778b4a244d0b543865f53ab5a23b58f555b77cc39cad3bb_1d64d9f5c68505d1e9378f7fc409630b78d150b6_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;
function f0(int32 i0,bytes memory i1)  returns(int32 o0,bytes memory o1)
{
  i0 = (((o0++ - 2026557241) * o0) * ((o0 & -478615342) % o0++));

  {

  }

  o0 &= (((799938916 | ((((--i0 - (((++i0 % 1994399681) & ++i0) ^ -170528021)) * i0) ^ (252237365 % ((-2055186054 * i0++) ^ -114698689))) % (1919099166 - (-1101503884 ^ 819511262)))) * -562471825) - i0);

  {
i0 &= ~(-1907377670);



i0 /= (-(o0) * o0);
  }
}
// ----
// TypeError 2271: (su0.sol:222-378): Operator % not compatible with types int32 and int_const 3823256436
